--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^2.6.4",
     "firebase": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "smooth-scroll": "^16.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
