--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "smooth-scroll": "^16.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "styled-components": "^5.3.0",
+    "react-countup": "^5.2.0",
+    "framer-motion": "^4.1.17",
+    "react-icons": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
