--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
     "mongoose": "^6.1.7",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "twilio": "^3.73.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
